# tatami_chunked

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: ChunkDimensionStats_8hpp.html  ChunkDimensionStats_8hpp_source.html  CustomChunkedMatrix_8hpp.html  CustomChunkedMatrix_8hpp_source.html  CustomDenseChunkedMatrix_8hpp.html  CustomDenseChunkedMatrix_8hpp_source.html  CustomSparseChunkedMatrix_8hpp.html  CustomSparseChunkedMatrix_8hpp_source.html  DenseSlabFactory_8hpp.html  DenseSlabFactory_8hpp_source.html  Doxyfile  LruSlabCache_8hpp.html  LruSlabCache_8hpp_source.html  OracleSlabCache_8hpp.html  OracleSlabCache_8hpp_source.html  OracularSlabCache_8hpp.html  OracularSlabCache_8hpp_source.html  OracularSubsettedSlabCache_8hpp.html  OracularSubsettedSlabCache_8hpp_source.html  OracularVariableSlabCache_8hpp.html  OracularVariableSlabCache_8hpp_source.html  SlabCacheStats_8hpp.html  SlabCacheStats_8hpp_source.html  SparseSlabFactory_8hpp.html  SparseSlabFactory_8hpp_source.html  SubsettedOracleSlabCache_8hpp.html  SubsettedOracleSlabCache_8hpp_source.html  annotated.html  classes.html  classtatami__chunked_1_1CustomChunkedDenseMatrix-members.html  classtatami__chunked_1_1CustomChunkedDenseMatrix.html  classtatami__chunked_1_1CustomChunkedDenseMatrix__coll__graph.md5  classtatami__chunked_1_1CustomChunkedDenseMatrix__inherit__graph.map  classtatami__chunked_1_1CustomChunkedSparseMatrix-members.html  classtatami__chunked_1_1CustomChunkedSparseMatrix.html  classtatami__chunked_1_1CustomChunkedSparseMatrix__coll__graph.map  classtatami__chunked_1_1CustomChunkedSparseMatrix__coll__graph.md5  classtatami__chunked_1_1CustomChunkedSparseMatrix__inherit__graph.map  classtatami__chunked_1_1CustomChunkedSparseMatrix__inherit__graph.md5  classtatami__chunked_1_1CustomDenseChunkedMatrix-members.html  (+183 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_1.js  enums_4.js  files_2.js  files_3.js  files_6.js  files_8.js  files_a.js  files_b.js  files_c.js  files_d.js  functions_2.js  functions_3.js  (+40 more)
include/tatami_chunked/: ChunkDimensionStats.hpp  CustomChunkedMatrix.hpp  CustomDenseChunkedMatrix.hpp  CustomSparseChunkedMatrix.hpp  DenseSlabFactory.hpp  LruSlabCache.hpp  OracleSlabCache.hpp  OracularSlabCache.hpp  OracularSubsettedSlabCache.hpp  OracularVariableSlabCache.hpp  SlabCacheStats.hpp  SparseSlabFactory.hpp  SubsettedOracleSlabCache.hpp  custom_chunk_coordinator.hpp  custom_internals.hpp  mock_dense_chunk.hpp  mock_sparse_chunk.hpp  simple_chunk_wrappers.hpp  tatami_chunked.hpp  typical_slab_cache.hpp
tests/: CMakeLists.txt
tests/src/: ChunkDimensionStats.cpp  CustomChunkedMatrix.cpp  CustomDenseChunkedMatrix.cpp  CustomSparseChunkedMatrix.cpp  LruSlabCache.cpp  OracleSlabCache.cpp  OracularSlabCache.cpp  OracularSubsettedSlabCache.cpp  OracularVariableSlabCache.cpp  SlabCacheStats.cpp  SubsettedOracleSlabCache.cpp  mock_blob.h  mock_dense_chunk.cpp  mock_sparse_chunk.cpp  simple_chunk_wrappers.cpp
